# smugmug_syncer

./: .gitignore  Cargo.toml  Dockerfile  HOWTO_LABEL_IMAGES.md  README.md  build.rs
py_ai_image_sorter/: .gitignore  conda_env.yml  face_img_folder_poplulater.py  file_locations.py  log_config.py  smugmug_syncer_ai_image_sorter.py
src/: face_detector.rs  label_maker.rs  local_folder.rs  main.rs  path_finder.rs  querier.rs  smugmug_folder.rs  synchronizer.rs  tagging.rs  tokens.rs
src_cxx/: dlib_types.h  face_detector.cc  face_detector.h  once_lock.h
